Fix: logo spacing issue with >HD screens
- The left side spacing of the logo was growing because of the max-
width setting of the image. This commit reduces the max-width to
something that is compatible with the size of the logo image to stop
the image spacing from growing.

--- a/themes/basakbeykoz/react-src/src/components/views/logo/_logo.view.scss
+++ b/themes/basakbeykoz/react-src/src/components/views/logo/_logo.view.scss
@@ -58,7 +58,7 @@ $feature-image--narrow-x-vw: #{get-component-property(
         padding-left: #{$padding-left};
         width: $width;
         min-width: 170px;
-        max-width: 350px;
+        max-width: 295px; // !HACK magic number, related to image size
         max-height: 50px;
         object-fit: scale-down;
       }
